--- a/src/components/GetIt/style.styl
+++ b/src/components/GetIt/style.styl
@@ -1,19 +1,29 @@
 .wrapper-get-it
     background-color: #2dd1ac
-    padding: 45px 0
+    padding: 60px 80px 60px 20px
     display: flex
+    flex-wrap: wrap
     align-items: center;
     justify-content: space-between
+    @media screen and (max-width 1100px)
+        flex-direction: column
+        justify-content: center
+        padding 60px 20px
     .wrapper-text
-        margin-left: 20px
-        h3
+        div
             color white
             font-family: 'Roboto'
             font-size: 35px
+            @media screen and (max-width 1000px)
+                font-size 28px
+                margin-bottom: 15px
+                text-align: center
         p
             color white
             font-family: 'Roboto'
             font-size: 20px
+            @media screen and (max-width 1000px)
+                display: none
     .get-it
         background-color: white
         border:1px solid white
@@ -24,7 +34,6 @@
         cursor pointer
         outline: none;
         transition: all 0.5s
-        margin-right: 100px
         padding: 10px 30px
         height: 58px;
         &:hover
