--- a/src/style/style.css
+++ b/src/style/style.css
@@ -350,7 +350,68 @@
   font-weight: 300;
   font-size: 19px;
 }
-.preMadeLayouts .view-more {
+.preMadeLayouts .uploadPreMadeLayout {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.preMadeLayouts .uploadPreMadeLayout .titleUploadPreMadeLayout {
+  margin: 0;
+  font-size: 40px;
+  font-family: 'Roboto';
+  text-align: center;
+  font-weight: 300;
+}
+.preMadeLayouts .uploadPreMadeLayout form {
+  display: inherit;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 40%;
+  margin-top: 25px;
+  height: 200px;
+}
+.preMadeLayouts .uploadPreMadeLayout form input[name="title"] {
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  padding-left: 18px;
+  opacity: 0.6;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: condensed;
+  line-height: 1.88;
+  letter-spacing: normal;
+  text-align: left;
+  color: rgba(86,86,86,0.6);
+  outline: none;
+}
+.preMadeLayouts .uploadPreMadeLayout form .labelFileInput {
+  font-family: 'Roboto';
+  color: rgba(86,86,86,0.6);
+  font-size: 16px;
+  padding: 10px;
+  cursor: pointer;
+  border: solid 1px #e6e6e6;
+  border-radius: 3px;
+}
+.preMadeLayouts .uploadPreMadeLayout form .nameFile {
+  font-family: 'Roboto';
+  font-size: 16px;
+  color: rgba(86,86,86,0.6);
+}
+.preMadeLayouts .uploadPreMadeLayout form .error {
+  font-family: 'Roboto';
+  font-size: 12px;
+  color: #f00;
+}
+.preMadeLayouts .uploadPreMadeLayout form input[name="premadeImage"] {
+  display: none;
+}
+.preMadeLayouts .uploadPreMadeLayout form button.send {
   background-color: #2dd1ac;
   border: 1px solid #2dd1ac;
   border-radius: 3px;
@@ -363,7 +424,7 @@
   padding: 15px 30px;
   transition: all 0.5s;
 }
-.preMadeLayouts .view-more:hover {
+.preMadeLayouts .uploadPreMadeLayout form button.send:hover {
   background-color: #24aa8c;
 }
 .advantages {
