fix problem space-between in last row with add new item to pre made grid, change readme.md

--- a/src/components/Home/PreMadeLayouts/style.styl
+++ b/src/components/Home/PreMadeLayouts/style.styl
@@ -42,6 +42,10 @@
                 font-family: 'Roboto'
                 font-weight: 300
                 font-size: 19px
+        .pre-made-layout-empty
+            width: 230px
+            height: 1px
+            margin: 30px 35px
     .uploadPreMadeLayout
         width: 100%
         display: flex
